--- a/package.json
+++ b/package.json
@@ -18,21 +18,29 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/seedrandom": "^3.0.5",
+    "bootstrap": "^5.3.1",
     "dayjs": "^1.11.9",
+    "jotai": "^2.4.2",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
-    "seedrandom": "^3.0.5"
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "8.43.0",
+    "@types/node": "^18.15.10",
+    "@types/react": "^18.0.29",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-next": "13.4.7",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-next": "^13.4.19",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "sass": "^1.66.1",
-    "typescript": "5.1.3"
+    "prettier": "^2.8.7",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.1",
+    "typescript": "^4.9.5"
   }
 }
